apps/dev/hello-api/service-tailnet-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-api-tailnet
  annotations:
    tailscale.com/hostname: hello-api-dev
